# tdd_vs_spec

./: .coverage  .gitmodules  .pre-commit-config.yaml  README.md  llms.txt  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
.skills/tdd_vs_spec/: SKILL.md
data/: llm_specs.jsonl
docs/: agents.md
scripts/: build_sweap_images.py
src/tdd_vs_spec/: __init__.py  _images.py  _minibatch.py  analysis.py  cli.py  conditions.py  eval_data.py  mcp_server.py  runner.py  spec_gen.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_conditions.py  test_eval_data.py  test_public_api.py  test_runner.py  test_spec_gen.py
