[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdd-vs-spec"
version = "0.1.0"
description = "Is the spec additive? Evaluating TDD vs spec-driven development for coding agents on SWE-bench Pro"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic-ai>=0.0.14",
    "datasets>=2.20",
    "pydantic>=2.7",
    "rich>=13",
    "duckdb>=1.0",
    "mcp>=1.0",
]

[project.scripts]
tdd-vs-spec = "tdd_vs_spec.cli:app"
tdd_vs_spec = "tdd_vs_spec.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B101", "B404", "B603", "B607"]

[tool.hatch.build.targets.wheel]
packages = ["src/tdd_vs_spec"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "basedpyright>=1.38.2",
    "cliqa>=0.1.5",
    "deptry>=0.24.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "vulture>=2.14",
]
