[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdd-vs-spec"
version = "0.1.0"
description = "Is the spec additive? Evaluating TDD vs spec-driven development for coding agents on SWE-bench Pro"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "pydantic-ai>=0.0.14",
  "datasets>=2.20",
  "pydantic>=2.7",
  "rich>=13",
  "duckdb>=1.0",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
agent = ["mini-swe-agent"]

[project.scripts]
tdd-vs-spec = "tdd_vs_spec.cli:app"
tdd_vs_spec = "tdd_vs_spec.cli:app"
tvs = "tdd_vs_spec.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: fast tests with no external I/O",
  "integration: slow tests that call real APIs or spawn processes",
]


[tool.basedpyright]
reportMissingTypeStubs = "none"
reportCallInDefaultInitializer = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportAny = "none"
reportUnknownArgumentType = "none"

[tool.ruff]
exclude = ["SWE-bench_Pro-os"]

[tool.deptry]
exclude = ["SWE-bench_Pro-os"]

[tool.bandit]
skips = ["B101"]

[tool.hatch.build.targets.wheel]
packages = ["src/tdd_vs_spec"]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "basedpyright>=1.38.2",
  "cliqa>=0.1.5",
  "deptry>=0.24.0",
  "mini-swe-agent<2.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.4",
  "vulture>=2.14",
]
